--- a/docs/style/view/stage.less
+++ b/docs/style/view/stage.less
@@ -71,6 +71,7 @@
 
         >.dancing-mate-container {
             margin-top: 30px;
+            max-height: 650px;
 
             >header {
                 display    : flex;
@@ -102,9 +103,12 @@
                 grid-template-columns: repeat(5, 1fr);
                 gap                  : 20px;
                 margin-top           : 12px;
+                max-height           : 520px !important;
+                overflow             : scroll;
             }
 
             >.button-container {
+                position       : sticky;
                 display        : flex;
                 text-align     : center;
                 justify-content: center;
@@ -157,6 +161,7 @@
 
         >.resting-mate-container {
             margin-top: 30px;
+            max-height: 650px;
 
             >header {
                 display    : flex;
@@ -188,6 +193,8 @@
                 grid-template-columns: repeat(5, 1fr);
                 gap                  : 20px;
                 margin-top           : 12px;
+                max-height           : 520px !important;
+                overflow             : scroll;
             }
 
             >.button-container {
